sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort2.scala.error
AlgCocktailSort2:35: error: not found: value estplusPetit
      if (!estplusPetit(i,i+1)){
           ^AlgCocktailSort2:42: error: not found: value estplusPetit
      if (!estplusPetit(i,i+1)){
           ^